--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">project</a></li>
-                <li><a href="contact.html">contact</a></li>
-                <li><a href="videodemo.html">video demo/a></li>
-                <li><a href="sitereport.html">site report</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="VideoDemo.html">Video Demo</a></li>
+                <li><a href="sitereport.html">Site Report</a></li>
             </ul>
         </nav>
     </header>
@@ -41,4 +41,3 @@
         </form>
     </section>
 </body>
-
