--- a/demo.html
+++ b/demo.html
@@ -4,20 +4,21 @@
             <meta charset = "utf-8">
             <meta name = "viewport"content="width=device-width,initial-scale=1.0">
             <title>home page</title>
-            <link rel ="stylesheet" href="index.css">
-            <link rel="stylesheet" href="toogle.css">   
+            <link rel ="stylesheet" href="demo.css">
+            <link rel="stylesheet" href="toggle.css">   
         </head>
 
         <body>
             <header class="header">
-                <nav class="nav">
-                    <ul class="nav-links">
+                <nav>
+                    <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="project.html">Projects</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="videoDemo.html">Video Demo</a></li>
                             <li><a href="sitereport.html">Site Report</a></li>
                             <a href="hamburgericon"hamburger icon></a>
+                            <a href="toogle button"night to day mode></a>
                             
                  
                             <div class="hamburger">
